kubernetes/system/argocd/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-main
  namespace: argocd
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`argo.woitzik.dev`)
    kind: Rule
    middlewares: [{name: crowdsec-bouncer, namespace: apps}, {name: authelia, namespace: apps}]
    services: [{name: argocd-server, port: 80}]
